# ACvsBC-Experiments

./: .gitignore  .travis.yml  README.md
XCSP3/: ACvsBC-Optimization.plt  ACvsBC.plt  CMakeLists.txt  disable-unsupported-division.patch  disable-unsupported-modulo.patch  experiments.sh  verification.sh
XCSP3/XCSP3/: ACvsBC-Optimization.plt  experiments.sh  print-parameters.patch
XCSP3/patches/: arc-consistency-propagation.patch  arc-consistency.patch  binarize-sum.patch  bounds-consistency.patch  bounds-oriented-consistency.patch  disable-element.patch  disable-unsupported-modulo.patch  mark-unimplemented-propagators.patch  print-parameters.patch  value-oriented-consistency.patch  value-oriented-propagation.patch
apps/: CMakeLists.txt  verification.sh
experiments/: CMakeLists.txt  experiments.sh  verification.sh  xcsp3.sh
experiments/XCSP3/: ACvsBC.plt  ACvsBC_Optimization.plt  competition.sh  compile-arc-consistency.patch  disable-element.patch  disable-unsupported-division.patch  disable-unsupported-modulo.patch  experiments.sh  print-parameters.patch
experiments/figures/: ACvsBC.plt  ratios_costs.plt  ratios_times.plt
figures-for-paper/: ratios_costs.plt  ratios_times.plt
naxos-arc-consistency/: README.md  constraints.cpp  expressions.cpp  naxos.h  problemmanager.cpp
